adicionando css e image

--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,7 @@ main {
   justify-content: space-around;
   margin: 2em;
 }
-
+/* 
 .itemsList div {
   border: 1px solid #d4d4d4;
   border-radius: 4px;
@@ -81,4 +81,4 @@ main {
   margin-bottom: 1.4em;
   padding: 0.3em;
   width: 10em;
-}
+} */
